--- a/python/src/CleaningStrategy_doc.i.in
+++ b/python/src/CleaningStrategy_doc.i.in
@@ -16,14 +16,19 @@ maximumDimension : positive int
     to determine the last term of the basis.
 maximumSize : positive int
     Parameter that characterizes the cleaning strategy. It represents the 
-    number of efficient coefficients of the basis. Its default value is set to 
-    20.
+    number of efficient coefficients of the basis.
+    Its default value is the `CleaningStrategy-DefaultMaximumSize` key of
+    the :class:`~openturns.ResourceMap`.
 significanceFactor : float 
-    Parameter used as a threshold for selecting the efficient coefficients of
-    the basis. The real threshold represents the multiplication of the
-    significanceFactor with the maximum magnitude of the current determined 
-    coefficients. Its default value is equal to :math:`1e^{-4}`.
-
+    Parameter used as a threshold factor for selecting the efficient coefficients of
+    the basis. The actual threshold is the product of the
+    *significanceFactor* with the maximum magnitude of the current
+    coefficients.
+    Its default value is the `CleaningStrategy-DefaultSignificanceFactor` key of
+    the :class:`~openturns.ResourceMap`.
+verbose : bool
+    Used for the online monitoring of the current basis updates (removed or
+    added coefficients).
 
 See also
 --------
@@ -31,31 +36,42 @@ AdaptiveStrategy, FixedStrategy
 
 Notes
 -----
-The cleaning strategy aims at building a PC expansion containing at most
-:math:`P` significant coefficients, i.e. at most :math:`P` significant basis
-functions. It proceeds as follows:
+The cleaning strategy aims at building a PC expansion containing
+only a subset of the coefficients of the full expansion.
+Hence, this strategy can lead to a sparse expansion which can
+limit the chances of potential surrogate model overfitting.
 
-- Generate an initial PC basis made of the :math:`P` first polynomials
+Let *maximumDimension* be the number of coefficients in the full expansion
+and let *maximumSize* be the maximum number of coefficients defined
+by the user.    
+On output, at most the minimum of *maximumDimension* and *maximumSize*
+coefficients are selected.
+Let :math:`\epsilon` be the value of the *significanceFactor*.
+The method proceeds as follows:
+
+- Generate an initial PC basis made of the *maximumDimension* first polynomials
   (according to the adopted :class:`~openturns.EnumerateFunction`), or
-  equivalently an initial set of indices :math:`K = \{0, \ldots, P-1\}`.
+  equivalently an initial set of indices :math:`\cK = \{0, \ldots, \textrm{maximumDimension} - 1\}`.
 
-- Discard from the basis all those polynomials :math:`\Psi_j` associated with 
-  insignificance coefficients, i.e. the coefficients that satisfy:
+- Discard from the basis any polynomial :math:`\Psi_j` associated with 
+  an insignificant coefficient, i.e. such that:
 
 .. math::
 
-    |a_j| \leq \epsilon \times \max_{ k \in K, k \neq 0 } |a_k|
+    |a_j| \leq \epsilon \times \max_{ k \in \cK, k \neq 0 } |a_k|.
 
-where :math:`\epsilon` is the significance factor, default is
-:math:`\epsilon = 10^{-4}`.
-
-- Add the next basis term :math:`\Psi_{k+1}` to the current basis :math:`K`.
-- Reiterate the procedure until either :math:`P` terms have been retained or if
-  the given maximum index :math:`P_{max}` has been reached.
+- Add the next basis term :math:`\Psi_{k+1}` to the current basis :math:`\cK`.
+- Reiterate the procedure until the minimum of *maximumDimension* and
+  *maximumSize* has been reached.
 
 
 Examples
 --------
+In the next example, we select, among the `maximumDimension = 100` first polynomials of
+the multivariate basis, those which have the `maximumSize = 20` most
+significant contribution (greatest absolute value of the coefficients), with respect to the
+significance factor :math:`10^{-4}`.
+
 >>> import openturns as ot
 >>> ot.RandomGenerator.SetSeed(0)
 >>> # Define the model
@@ -69,16 +85,12 @@ Examples
 ...     polyColl[i] = ot.StandardDistributionPolynomialFactory(distribution.getMarginal(i))
 >>> enumerateFunction = ot.LinearEnumerateFunction(inputDim)
 >>> productBasis = ot.OrthogonalProductPolynomialFactory(polyColl, enumerateFunction)
->>> # Truncature strategy of the multivariate orthonormal basis
->>> # We want to select, among the maximumDimension = 100 first polynomials of
->>> # the multivariate basis, those which have the maximumSize = 20 most 
->>> # significant contribution (greatest coefficients), with respect to the 
->>> # significance factor = 10^-4.
 >>> maximumDimension = 100
 >>> maximumSize = 20
 >>> significanceFactor = 1e-4
->>> adaptiveStrategy = ot.CleaningStrategy(productBasis, maximumDimension,
-...                                          maximumSize, significanceFactor)"
+>>> adaptiveStrategy = ot.CleaningStrategy(
+...     productBasis, maximumDimension, maximumSize, significanceFactor
+... )"
 
 // ---------------------------------------------------------------------
 
@@ -97,7 +109,7 @@ index : integer
 
 Returns
 -------
-size : integer
+maximumSize : integer
     Maximum number of significant terms of the basis.
 
 See also
@@ -111,7 +123,7 @@ setMaximumSize"
 
 Returns
 -------
-factor : float
+significanceFactor : float
     Value of the significance factor.
 
 See also
@@ -125,7 +137,7 @@ setSignificanceFactor"
 
 Parameters
 ----------
-size : integer
+maximumSize : integer
     Maximum number of significant terms of the basis.
 
 See also
@@ -139,10 +151,70 @@ getMaximumSize"
 
 Parameters
 ----------
-factor : float
+significanceFactor : float
     Value of the significance factor.
 
 See also
 --------
 getSignificanceFactor"
 
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::CleaningStrategy::setVerbose
+"Accessor to the verbose.
+
+Parameters
+----------
+verbose : bool
+    Enable the online monitoring of the current basis updates or not.
+
+See also
+--------
+getVerbose"
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::CleaningStrategy::updateBasis
+"Update the basis for the next iteration of approximation.
+
+In this strategy, the *residual* and the *relativeError* input arguments
+are ignored.
+
+Parameters
+----------
+alpha_k: sequence of floats
+    The coefficients of the expansion at this step.
+residual: float
+    The current value of the residual. Ignored.
+relativeError: float
+    The relative error. Ignored.
+
+Examples
+--------
+>>> import openturns as ot
+>>> dimension = 3
+>>> enumerateFunction = ot.LinearEnumerateFunction(dimension)
+>>> productBasis = ot.OrthogonalProductPolynomialFactory(
+...     [ot.LegendreFactory()] * dimension, enumerateFunction
+... )
+>>> degree = 6
+>>> basisSize = enumerateFunction.getBasisSizeFromTotalDegree(degree)
+>>> maximumDimension = 100
+>>> maximumSize = 20
+>>> significanceFactor = 1e-4
+>>> adaptiveStrategy = ot.CleaningStrategy(
+...     productBasis, maximumDimension, maximumSize, significanceFactor
+... )
+>>> adaptiveStrategy.computeInitialBasis()
+>>> print(adaptiveStrategy.getCurrentVectorIndex())
+20
+>>> psi = adaptiveStrategy.getPsi()
+>>> print(len(psi))
+20
+>>> alpha_k = [3.5, 0.1, 0.0, -0.2, 0.0, 0.3, 0.0, -0.4, 0.0, -0.5]
+>>> residual = 0.0  # Ignored
+>>> relativeError = 0.0  # Ignored
+>>> adaptiveStrategy.updateBasis(alpha_k, residual, relativeError)
+>>> psi = adaptiveStrategy.getPsi()
+>>> print(len(psi))
+7"
