--- a/python/src/PenalizedLeastSquaresAlgorithm_doc.i.in
+++ b/python/src/PenalizedLeastSquaresAlgorithm_doc.i.in
@@ -12,10 +12,14 @@ Available constructors:
 
 Parameters
 ----------
-x : :class:`~openturns.Sample`
-    Input sample
-y : :class:`~openturns.Sample`
-    Output sample
+x : 2-d sequence of float
+    The input random observations :math:`\left\{\vect{x}^{(1)}, ..., \vect{x}^{(n)}\right\}` 
+    where :math:`\vect{x} = \Tr{\left(x_1, \dots, x_{n_X}\right)}` is the input of the physical
+    model, :math:`n_X \in \Nset` is the input dimension and :math:`n \in \Nset` is the sample size.
+y : 2-d sequence of float
+    The output random observations :math:`\left\{\vect{y}^{(1)}, ..., \vect{y}^{(n)}\right\}` 
+    where :math:`\vect{y} = \Tr{\left(y_1, \dots, y_{n_Y}\right)}` is the output of the physical
+    model, :math:`n_Y \in \Nset` is the output dimension and :math:`n \in \Nset` is the sample size.
 weight : sequence of float
     Output weights
 psi : sequence of :class:`~openturns.Function`
@@ -35,9 +39,16 @@ ApproximationAlgorithm, LeastSquaresMetaModelSelection
 
 Notes
 -----
-Solve the least-squares problem:
+For each output marginal :math:`k \in \{1, ..., n_Y\}`,
+solve the least-squares problem:
 
 .. math::
 
-    \vect{a} = \argmin_{\vect{b} \in \Rset^P} ||y - \vect{b}^{\intercal} \vect{\Psi}(\vect{U})||^2
-"
+    \widehat{\vect{a}} = \argmin_{\vect{a} \in \Rset^P} \left\|\vect{y}_k - \Tr{\mat{\Psi}} \vect{a} \right\|^2
+
+where :math:`\vect{y}_k \in \Rset^{n}` is the :math:`k`-th marginal of the
+sample of output observations,
+:math:`P \in \Nset` is the number of coefficients,
+:math:`\mat{\Psi} \in \Rset^{n \times P}` is the design matrix
+computed from the input sample *x* and
+:math:`\vect{a} \in \Rset^P` is the vector of coefficients."
