Update LinearModelAlgorithm_doc.i.in (remove non-existing methods)

--- a/python/src/LinearModelAlgorithm_doc.i.in
+++ b/python/src/LinearModelAlgorithm_doc.i.in
@@ -98,12 +98,7 @@ Examples
 >>> outputSample = func(inputSample)
 >>> algo = ot.LinearModelAlgorithm(inputSample, outputSample)
 >>> algo.run()
->>> result = algo.getResult()
->>> design = result.getDesign()
->>> gram = design.computeGram()
->>> inverseGram = gram.inverse()
->>> projection = result.computeProjectionMatrix()
->>> leverages = result.getLeverages()"
+>>> result = algo.getResult()"
 
 // ---------------------------------------------------------------------
 
