--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set (CMAKE_TRY_COMPILE_CONFIGURATION ${CMAKE_BUILD_TYPE})
 project (openturns)
 
 option (USE_BISON                    "Looks for Bison if true and then build parser"                         ON)
+option (USE_CUBA                     "Use Cuba library"                                                      ON)
 option (USE_FLEX                     "Looks for Flex if true and then build lexer"                           ON)
 option (USE_TBB                      "Use Intel Threading Building Blocks library for multithreading"        ON)
 option (USE_HMAT                     "Use HMat library"                                                      ON)
@@ -281,6 +282,25 @@ if (USE_BOOST)
     endif ()
     list (APPEND OPENTURNS_PRIVATE_INCLUDE_DIRS ${Boost_INCLUDE_DIRS})
     list (APPEND OPENTURNS_ENABLED_FEATURES "boost")
+  endif ()
+endif ()
+
+if (USE_CUBA)
+  find_package (Cuba CONFIG)
+  if (Cuba_FOUND)
+    set (OPENTURNS_HAVE_CUBA TRUE)
+    message (STATUS "Found Cuba: ${CUBA_DIR} (found version ${CUBA_VERSION})")
+    list (APPEND OPENTURNS_PRIVATE_LIBRARIES cuba)
+    list (APPEND OPENTURNS_ENABLED_FEATURES "cuba")
+  else ()
+    # fallback to our macro if CubaConfig is not provided
+    find_package (Cuba)
+    if (Cuba_FOUND)
+      set (OPENTURNS_HAVE_CUBA TRUE)
+      list (APPEND OPENTURNS_PRIVATE_INCLUDE_DIRS ${CUBA_INCLUDE_DIRS})
+      list (APPEND OPENTURNS_PRIVATE_LIBRARIES ${CUBA_LIBRARIES})
+      list (APPEND OPENTURNS_ENABLED_FEATURES "cuba")
+    endif ()
   endif ()
 endif ()
 
