--- a/lib/src/Base/Algo/CMakeLists.txt
+++ b/lib/src/Base/Algo/CMakeLists.txt
@@ -56,6 +56,7 @@ ot_add_source_file (KarhunenLoeveP1Algorithm.cxx)
 ot_add_source_file (KarhunenLoeveProjection.cxx)
 ot_add_source_file (KarhunenLoeveLifting.cxx)
 ot_add_source_file (KarhunenLoeveValidation.cxx)
+ot_add_source_file (CubaIntegration.cxx)
 
 ot_install_header_file (OTAlgo.hxx)
 ot_install_header_file (ApproximationAlgorithmImplementation.hxx)
@@ -112,3 +113,4 @@ ot_install_header_file (KarhunenLoeveP1Algorithm.hxx)
 ot_install_header_file (KarhunenLoeveProjection.hxx)
 ot_install_header_file (KarhunenLoeveLifting.hxx)
 ot_install_header_file (KarhunenLoeveValidation.hxx)
+ot_install_header_file (CubaIntegration.hxx)
