Added new GaussianProcessConditionalCovariance class for post processing GPR result (cond cov).
This class allows estimating conditional mean and conditional
covariance, which should not be anymore be services of a Result class

Add the entry point in the sphinx documentation + cxx/py tests

Also updated gpf and gpr pyplots to account for the illustrate the usage
of the new GPCC class

--- a/lib/src/Uncertainty/Algorithm/MetaModel/Kriging/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/MetaModel/Kriging/CMakeLists.txt
@@ -14,7 +14,7 @@ ot_add_source_file (GaussianProcessFitterResult.cxx)
 ot_add_source_file (GaussianProcessFitter.cxx)
 ot_add_source_file (GaussianProcessRegressionResult.cxx)
 ot_add_source_file (GaussianProcessRegression.cxx)
-
+ot_add_source_file (GaussianProcessConditionalCovariance.cxx)
 
 ot_install_header_file (KrigingEvaluation.hxx)
 ot_install_header_file (KrigingGradient.hxx)
@@ -26,5 +26,6 @@ ot_install_header_file (GaussianProcessFitterResult.hxx)
 ot_install_header_file (GaussianProcessFitter.hxx)
 ot_install_header_file (GaussianProcessRegressionResult.hxx)
 ot_install_header_file (GaussianProcessRegression.hxx)
+ot_install_header_file (GaussianProcessConditionalCovariance.hxx)
 
 ot_install_header_file (OTKriging.hxx)
