--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -644,6 +644,7 @@ ot_check_test (MetaModelValidation_std)
 ot_check_test (GeneralLinearModelAlgorithm_std IGNOREOUT)
 ot_check_test (GaussianProcessFitter_std IGNOREOUT)
 ot_check_test (GaussianProcessRegression_std IGNOREOUT)
+ot_check_test (GaussianProcessConditionalCovariance_std IGNOREOUT)
 ot_check_test (LinearModelAlgorithm_std)
 ot_check_test (LinearModelAnalysis_std)
 ot_check_test (LinearModelValidation_std IGNOREOUT)
