--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -759,6 +759,7 @@ ot_pyinstallcheck_test (MetaModelValidation_std)
 ot_pyinstallcheck_test (GeneralLinearModelAlgorithm_std)
 ot_pyinstallcheck_test (GaussianProcessFitter_std IGNOREOUT)
 ot_pyinstallcheck_test (GaussianProcessRegression_std IGNOREOUT)
+ot_pyinstallcheck_test (GaussianProcessConditionalCovariance_std IGNOREOUT)
 if (HMAT_FOUND)
   ot_pyinstallcheck_test (KrigingAlgorithm_std_hmat)
   ot_pyinstallcheck_test (GeneralLinearModelAlgorithm_std_hmat)
