added python tests

--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -237,6 +237,7 @@ ot_pyinstallcheck_test (NonStationaryCovarianceModelFactory_std)
 ot_pyinstallcheck_test (ProductCovarianceModel_std)
 ot_pyinstallcheck_test (StationaryFunctionalCovarianceModel_std IGNOREOUT)
 ot_pyinstallcheck_test (LatentVariableModel_std IGNOREOUT)
+ot_pyinstallcheck_test (ProcessAndFieldOperators_std)
 
 if (HMAT_FOUND)
 ot_pyinstallcheck_test (HMatrix_std)
