--- a/python/src/DistributionImplementation_doc.i.in
+++ b/python/src/DistributionImplementation_doc.i.in
@@ -216,7 +216,7 @@ Parameters
 ----------
 p : float, sequence of float, :math:`p \in [0, 1]`
     Conditional quantile.
-Xcond : sequence of float, 2-d sequence of float with size :math:`d-1`
+xcond : sequence of float, 2-d sequence of float with size :math:`d-1`
     Conditioning values.
 
 Returns
