--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -356,6 +356,7 @@ ot_pyinstallcheck_test (KarhunenLoeveValidation_std IGNOREOUT)
 ot_pyinstallcheck_test (P1LagrangeInterpolation_std)
 ot_pyinstallcheck_test (P1LagrangeEvaluation_std IGNOREOUT)
 ot_pyinstallcheck_test (SimplicialCubature_std IGNOREOUT)
+ot_pyinstallcheck_test (CubaIntegration_std IGNOREOUT)
 
 ## Model
 ot_pyinstallcheck_test (StandardEvent_std)
