--- a/python/src/MethodOfMomentsFactory_doc.i.in
+++ b/python/src/MethodOfMomentsFactory_doc.i.in
@@ -29,8 +29,8 @@ can be expressed as a function of the :math:`\vect{\theta}`:
 
 .. math::
 
-    \mu_1 =  \Expect{X} = g_1(\theta_1, \dots, \theta_{d_\theta})  \\
-    \mu_k =  \Expect{(X - \mu_1)^k} = g_k(\theta_1, \dots, \theta_{d_\theta}), \quad 2 \leq k \leq d_\theta.
+    \mu_1 & =  \Expect{X} = g_1(\theta_1, \dots, \theta_{d_\theta})  \\
+    \mu_k & =  \Expect{(X - \mu_1)^k} = g_k(\theta_1, \dots, \theta_{d_\theta}), \quad 2 \leq k \leq d_\theta.
 
 
 Let :math:`(\widehat{\mu}_1, \dots, \widehat{\mu}_{d_\theta})` be the empirical mean and the
@@ -39,8 +39,8 @@ evaluated on the sample :math:`(x_1, \dots, x_n)`:
 
 .. math::
 
-    \widehat{\mu}_1 = \dfrac{1}{n} \sum_{i=1}^n x_i \\
-    \widehat{\mu}_k = \dfrac{1}{n} \sum_{i=1}^n (x_i - \widehat{\mu}_1)^k, \quad 2 \leq k \leq d_\theta.
+    \widehat{\mu}_1 & = \dfrac{1}{n} \sum_{i=1}^n x_i \\
+    \widehat{\mu}_k & = \dfrac{1}{n} \sum_{i=1}^n (x_i - \widehat{\mu}_1)^k, \quad 2 \leq k \leq d_\theta.
 
 Then the estimator :math:`\widehat{\theta} = \left(\widehat{\theta}_1,
 \dots, \widehat{\theta}_{d_\theta}\right)` built by the method of moments is solution of the
