Correction of tests after rebase Spelling corrections Compatibility with matplotlib < 3.6

--- a/python/src/Contour_doc.i.in
+++ b/python/src/Contour_doc.i.in
@@ -478,7 +478,7 @@ Returns
 -------
 hatches : :class:`~openturns.Description`
     A list of cross hatch patterns to use on the filled areas.
-    Hatches can use folowing characters : /\|-+xoO.*"
+    Hatches can use following characters : /\|-+xoO.*"
 
 // ---------------------------------------------------------------------
 
@@ -489,4 +489,4 @@ Parameters
 ----------
 hatches : sequence of str
     A list of cross hatch patterns to use on the filled areas.
-    Hatches can use folowing characters : /\|-+xoO.*"
+    Hatches can use following characters : /\|-+xoO.*"
