--- a/python/src/MonteCarloExperiment_doc.i.in
+++ b/python/src/MonteCarloExperiment_doc.i.in
@@ -16,11 +16,12 @@ size : positive int
 
 Notes
 -----
-MonteCarloExperiment is a random weighted design of experiments.
-The :meth:`generate` method generates points :math:`(\Xi_i)_{i \in I}`
-independently from the distribution :math:`\mu`. The weights associated to the
-points are all equal to :math:`1/\mathrm{card}\,I`. When the :meth:`generate` method is
-recalled, the generated sample changes.
+MonteCarloExperiment is a random weighted design of experiments ([hammersley1961]_ page 51, [lemieux2009]_ page 3).
+The :meth:`generate` method computes the nodes :math:`(\inputReal_i)_{i = 1, ..., \sampleSize}`
+by generating independent observations from the distribution :math:`\mu`. The weights associated to the
+points are all equal to :math:`w_i = \frac{1}{\sampleSize}` where :math:`\sampleSize` is the sample size. 
+When the :meth:`generate` method is
+called a second time, the generated sample changes.
 
 See also
 --------
