Added a stiffened panel buckling model

--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -46,6 +46,7 @@ ot_pyinstallcheck_test (stressed_beam IGNOREOUT)
 ot_pyinstallcheck_test (fireSatellite_function IGNOREOUT)
 ot_pyinstallcheck_test (wingweight_function IGNOREOUT)
 ot_pyinstallcheck_test (oscillator IGNOREOUT)
+ot_pyinstallcheck_test (stiffened_panel IGNOREOUT)
 if (NUMPY_FOUND)
   ot_pyinstallcheck_test (viscous_free_fall IGNOREOUT)
 endif()
