Python tests for LsqSolver

--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -318,6 +318,8 @@ ot_pyinstallcheck_test (Secant_std)
 ot_pyinstallcheck_test (Solver_hard)
 ot_pyinstallcheck_test (RungeKutta_std)
 ot_pyinstallcheck_test (Fehlberg_std)
+ot_pyinstallcheck_test (LsqSolver_std IGNOREOUT)
+
 
 # Algo
 ot_pyinstallcheck_test (PenalizedLeastSquaresAlgorithm_std)
